# human-use

./: .env.example  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 75a4022c99b0_add_brief_column_to_sessions.py  a3f9d2e1b4c8_add_image_artifacts_table.py  e2b788ce5aac_create_users_sessions_messages_tables.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  store.ts  types.ts
frontend/src/components/: AgentThoughtBubble.tsx  AnimatedMessageWrapper.tsx  ArtifactsPanel.tsx  AuthGate.tsx  BriefPanel.tsx  ChatInputBar.tsx  ChatMessageList.tsx  ChatPane.tsx  ClarifyingQuestion.tsx  ClarifyingQuestionBubble.tsx  DemographicBar.tsx  ImageABTestBubble.tsx  LoginPage.tsx  OrdersPanel.tsx  PdfPanel.tsx  PdfToolbar.tsx  ResearchPdfDocument.tsx  Sidebar.tsx  SurveyResultCard.tsx  TargetingSelector.tsx  ThinkingBubble.tsx  ThoughtStream.tsx  UserMessageBubble.tsx  WorldMap.tsx
frontend/src/context/: ResearchContext.tsx
frontend/src/hooks/: useAuth.ts  useResearchStream.ts
frontend/src/lib/: api.ts
src/human_use/: agent.py  api.py  auth.py  client.py  crud.py  db.py  db_models.py  models.py  server.py  tools.py
src/human_use/routers/: auth.py  sessions.py
tests/: conftest.py  test_api.py  test_auth.py  test_images.py  test_sessions.py  test_tools.py
